<resources>
    <string name="app_name">CookieTwo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Your email is wrong, please re-try with a working email</string>
    <string name="password">For your own safety your password has to be longer than 6 characters please enter a longer password.</string>
    <string name="wlc">Welcome</string>
    <string name="wlcbck">Welcome Back</string>
    <string name="inncrt">Incorrect password or username</string>
    <string name="cookietext">"Your cookie amount is "</string>
    <string name="highscoretext">"Your highscore is "</string>
    <string name="naming">"Name: "</string>
    <string name="Cookkkies">"Cookies: "</string>
    <string name="Highestt">"Highest Cookie: "</string>
    <string name="changelogin">Want to Login? Click Here!</string>
    <string name="changesign">Want to Sign Up? Click Here!</string>
    <string name="shop">Shop</string>
    <string name="vipshop">VIP - 950 Cookies - \"The only way of feeling extra ordinary!\", this amazing feature provides you the theme of VIP where the text and cookie photo changes into a unique one just for you.</string>
    <string name="urprofil">Profile Information:</string>
    <string name="namingone">Profile Page Information Of </string>
    <string name="twodot">:</string>
    <string name="space"></string>
    <string name="checkbox">Remember Me</string>
    <string name="splashscreenunable">There has been technical problems while automatically signing in with your given email and password please check if your email is working or if you have been banned.</string>
    <string name="VIPYES">"VIP On? : False"</string>
    <string name="VIPNO">"VIP On? : True"</string>
    <string name="RebirthProfile">"Rebirths: "</string>
    <string name="AdderProfile">"Adder Amount: "</string>
    <string name="PINKYES">Pink Bought?: True</string>
    <string name="PINKNO">Pink Bought?: False</string>
    <string name="REDYES">Red Bought?: True</string>
    <string name="REDNO">Red Bought?: False</string>
    <string name="STARYES">Star Bought?: True</string>
    <string name="STARNO">Star Bought?: False</string>
    <string name="MOONNO">Moon Bought?: False</string>
    <string name="MOONYES">Moon Bought?: True</string>
    <string name="YELLOWYES">Yellow Bought?: True</string>
    <string name="YELLOWNO">Yellow Bought?: False</string>
    <string name="GREENYES">Green Bought?: True</string>
    <string name="GREENNO">Green Bought?: False</string>
    <string name="leaderboardtext">Leaderboard</string>
    <string name="motivation_text">Want to be the best in the leaderboard? well then you can start by cliciking cookies!</string>
    <string name="shop_text">Shop</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="login_text">Login</string>
    <string name="back">Back</string>
    <string name="username_text">Username:</string>
    <string name="register_text">Register</string>
    <string name="buy_text">Buy</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Shop</string>
    <string name="title_register">Register</string>
    <string name="title_log_in">Log in</string>
    <string name="title_notifications">Profile</string>
    <string name="title_activity_new_user">NewUserActivity</string>
    <string name="switch_profile">Is active?</string>
</resources>