<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register.Register" >

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/xxxxx_large_size_margin"
        app:cardBackgroundColor="#00424242"
        app:cardCornerRadius="20dp"
        app:layout_constraintTop_toBottomOf="@id/titleRegister"
        tools:layout_editor_absoluteX="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:backgroundTint="@null">

            <EditText
                android:id="@+id/emailText"
                style="@style/edittext"
                android:layout_marginTop="@dimen/x_large_size_margin"
                android:hint="@string/email_text"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/passwordText"
                style="@style/edittext"
                android:layout_marginTop="@dimen/x_large_size_margin"
                android:hint="@string/password_text"
                android:inputType="textPassword"
                app:layout_constraintStart_toStartOf="@id/emailText"
                app:layout_constraintTop_toBottomOf="@id/emailText" />

            <EditText
                android:id="@+id/userNameText"
                style="@style/edittext"
                android:layout_marginTop="@dimen/x_large_size_margin"
                android:hint="@string/username_text"
                android:inputType="textPersonName"
                app:layout_constraintStart_toStartOf="@id/passwordText"
                app:layout_constraintTop_toBottomOf="@id/passwordText" />

            <Button
                android:id="@+id/registerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/userNameText" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <ImageView
        android:id="@+id/imageView2"
        style="@style/bjk"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/titleRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_text"
        android:textColor="@color/logocolour"
        android:textSize="@dimen/x_large_size_text"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/xxx_large_size_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="@dimen/logo_width"
        android:layout_height="@dimen/logo_height"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/loginChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/logocolour"
        android:textStyle="bold"
        android:textSize="@dimen/large_size_text"
        android:text="@string/changelogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />


</androidx.constraintlayout.widget.ConstraintLayout>